Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Add fallback users for recipients
* Add contact mechanism usage

Version 4.6.0 - 2017-10-30
* Initial release