@@ -4,6 +4,7 @@ depends:
     ir
     res
 extras_depend:
+    company
     party
     web_user
 xml:
